# PFR

./: .gitignore  README.md
FollowMeFramework/MMT/: setup.py
FollowMeFramework/MMT/MMT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
FollowMeFramework/camera_utils/camera_utils/: from2Dto3D.py
FollowMeFramework/camera_utils/camera_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FollowMeFramework/followme/: CMakeLists.txt  package.xml  setup.py
FollowMeFramework/followme/include/followme/: GeneralControlHandler.h  GestureHandler.h  SearchNearbyHandler.h  TargetSideHandler.h  TransformHandler.h
FollowMeFramework/followme/launch/: amcl.launch  guida_followme.launch  move_base.launch
FollowMeFramework/followme/params/: base_local_planner_params.yaml  costmap_common_params.yaml  followme_guida_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  plugins_params.yaml
FollowMeFramework/followme/rviz/: rviz_config.rviz
FollowMeFramework/followme/scripts/: track_person_node.py
FollowMeFramework/followme/scripts/followme.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
FollowMeFramework/followme/scripts/followme_py_pkg/: KalmanFilter3D.py  PersonManager.py  Reidentificator.py  __init__.py  ddekf.py  mp_segment.py  quant-model.py
FollowMeFramework/followme/src/: GeneralControlHandler.cpp  GestureHandler.cpp  SearchNearbyHandler.cpp  TargetSideHandler.cpp  TransformHandler.cpp  followme_node.cpp  obstacle_avoidance_node.cpp
FollowMeFramework/followme/world/CurrentWorld/: CurrentWorld.yaml
FollowMeFramework/followme/world/Hallway/: hallway.pgm  hallway.yaml
FollowMeFramework/followme/world/IS3L_map/: isr-150524.pgm  isr-150524.yaml
FollowMeFramework/followme/world/cube_test/: model.sdf
FollowMeFramework/followme/world/lab_room/: lab_room.pgm  lab_room.yaml
FollowMeFramework/followperson_local_planner/: CMakeLists.txt  fp_plugin.xml  package.xml
FollowMeFramework/followperson_local_planner/include/followperson_local_planner/: FollowNearbyControl.h  followperson_local_planner.h
FollowMeFramework/followperson_local_planner/params/: followperson_local_planner.yaml
FollowMeFramework/followperson_local_planner/src/: FollowNearbyControl.cpp  followperson_local_planner.cpp
SocialNav/navigation_layers/social_navigation_layers/cfg/: ProxemicLayer.cfg
