<?xml version="1.0"?>
<package format="2">
  <name>followme</name>
  <version>1.0.0</version>
  <description>The FollowMe package</description>

  
  <maintainer email="rollo.f96@gmail.com">Federico Rollo</maintainer>
  <author email="rollo.f96@gmail.com">Federico Rollo</author>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/followme</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>

  <export>
   
  </export>
</package>
